feat: add images; add home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,6 +85,15 @@ body {
   overflow-x: hidden;
 }
 
+/* 
+  section-5
+  w-row
+  column-4
+  w-col
+  w-col-6
+
+*/
+
 sa {
   color: inherit;
   text-decoration: none;
