feat: add contact form

--- a/src/styles/morgantaxappeals.webflow.css
+++ b/src/styles/morgantaxappeals.webflow.css
@@ -33,7 +33,6 @@
 
 body {
   color: #333;
-  font-family: Roboto, sans-serif;
   font-size: 14px;
   line-height: 20px;
 }
@@ -503,10 +502,9 @@ p {
   line-height: 21px;
 }
 
-.body {
+body {
   background-color: var(--white);
   color: #000;
-  font-family: Open Sans, sans-serif;
 }
 
 .submit-button {
