--- a/src/styles/webflow.css
+++ b/src/styles/webflow.css
@@ -1618,6 +1618,11 @@ textarea.w-select {
   margin-left: auto;
   margin-right: auto;
 }
+
+.w-nav-link:last-child {
+  margin-right: -20px;
+}
+
 .w-nav-link.w--current {
   color: #0082f3;
 }
