--- a/src/components/BlogPostsGrid.module.css
+++ b/src/components/BlogPostsGrid.module.css
@@ -6,3 +6,13 @@
   margin-bottom: 3rem;
   padding: 0 1rem;
 }
+
+.emptyContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  padding: 0 1rem;
+}
