--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,3 +104,12 @@ sa {
     color-scheme: dark;
   }
 }
+
+.not-found{
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
