--- a/src/styles/morgantaxappeals.webflow.css
+++ b/src/styles/morgantaxappeals.webflow.css
@@ -105,8 +105,8 @@ p {
 .hero-section {
   height: 500px;
   background-color: #000;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.607), rgba(0, 0, 0, 0.361)),
-    url('/images/palmtrees.webp');
+  background-image: linear-gradient(rgba(0, 27, 67, 0.644), rgba(2, 0, 90, 0.641)),
+    url('/images/irs.webp');
   background-position: 0 0, 0 0;
   flex-direction: column;
   justify-content: center;
