--- a/src/styles/morgantaxappeals.webflow.css
+++ b/src/styles/morgantaxappeals.webflow.css
@@ -136,7 +136,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 70px;
+  /* padding-top: 70px; */
   padding-bottom: 70px;
   display: flex;
 }
